# poncos

./: .clang-tidy  .clang_complete  .gitignore  .travis.yml  CMakeLists.txt  README.md  macsnb.queue  pons.hpp  pons_macsnb.cpp
example/: NPB.q  NPB.yml  haswell_EP.yml  lamablast.q  machine  sandybridge_EP.yml  slot-0.xml  slot-1.xml
example/slots-host-passthrough/: slot-1.xml
example/slots-ivb-snb-compatible/: slot-0.xml  slot-1.xml
include/poncos/: cgroup_controller.hpp  controller.hpp  controller_cgroup.hpp  controller_vm.hpp  job.hpp  poncos.hpp  scheduler.hpp  scheduler_multi_app.hpp  scheduler_multi_app_consec.hpp  scheduler_two_app.hpp  system_config.hpp  vm_controller.hpp
jsspp16/bench/: e.sh  lama_starter.sh
jsspp16/output/snb28/: empty.queue-clustsafe-energy.txt  heat-rapl-energy-.txt
paper/jsspp16/bench/: mpiblast_starter.sh
paper/jsspp16/bench/output/: time-lama-8.txt
paper/jsspp16/output/snb28/: heat-clustsafe-energy-3.txt  lama_mpiblast.queue-clustsafe-energy.txt  macsnb.queue-clustsafe-energy.txt  temp.txt  time-lama-8.txt
paper/jsspp16/queues/: lama_mpiblast.queue  macsnb.queue
script/: cgroup_wrapper.sh  cgroup_wrapper_systemd.sh
src/: cgroup_controller.cpp  classify.cpp  controller.cpp  controller_cgroup.cpp  controller_vm.cpp  helper.cpp  job.cpp  poncos.cpp  scheduler.cpp  scheduler_multi_app.cpp  scheduler_multi_app_consec.cpp  scheduler_two_app.cpp  system_config.cpp  vm_controller.cpp
system_config/: haswell_EP.cpp  sandybridge_EP.cpp  vm_pool.cpp
